mra/plots/SalinityVsDepthPlot: Fix Java9+ deprecation for new Double.